applications/filebrowser/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("files.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: filebrowser
          port: 8080
